--- a/client/package.json
+++ b/client/package.json
@@ -27,5 +27,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://us-central1-social-ape-97c74.cloudfunctions.net/api"
 }
