--- a/client/package.json
+++ b/client/package.json
@@ -37,5 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://us-central1-social-ape-97c74.cloudfunctions.net/api"
+  "proxy": "http://localhost:5001/social-ape-97c74/us-central1/api"
 }
